--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@ __pycache__/
 # C extensions
 *.so
 
+# Folders
+/data/raw/U.S._Chronic_Disease_Indicators__CDI___2023_Release.csv
+
 # Distribution / packaging
 .Python
 build/
