--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,14 @@
 {
     "builds": [
       {
-        "src": "website/*",
+        "src": "frontend/*",
         "use": "@vercel/static"
       }
     ],
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "/website/$1"
+        "dest": "/frontend/$1"
       }
     ]
   }
